// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|RoundedBox default 1`] = `
<div
  style={
    Object {
      "margin": "30px",
    }
  }
>
  <div>
    <div
      style={Object {}}
    >
      <div
        className="rounded-box"
      >
        <p>
          Content
        </p>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            className="css-4akams"
          >
            <div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;
                    RoundedBox
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      p
                    </span>
                    <span />
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &gt;
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 48,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      Content
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;/
                      p
                      &gt;
                    </span>
                  </div>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;/
                    RoundedBox
                    &gt;
                  </span>
                </div>
              </div>
            </div>
            <button
              className="css-gydez8"
              onClick={[Function]}
            >
              <div
                className="css-kv47nt"
              >
                <div
                  style={
                    Object {
                      "marginBottom": 6,
                    }
                  }
                >
                  Copied!
                </div>
                <div>
                  Copy
                </div>
              </div>
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              RoundedBox
              " Component
            </h2>
            <table
              className="css-1ytzlk7"
            >
              <thead>
                <tr>
                  <th
                    className="css-d52hbj"
                  >
                    property
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    propType
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    required
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    default
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    children
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    header
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    subheader
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    className
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    style
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    HeaderComponent
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components|RoundedBox with header 1`] = `
<div
  style={
    Object {
      "margin": "30px",
    }
  }
>
  <div>
    <div
      style={Object {}}
    >
      <div
        className="rounded-box"
      >
        <h4
          className="rounded-box__subheader"
        >
          Sub header
        </h4>
        <h2
          className="rounded-box__header"
        >
          Header
        </h2>
        <p>
          Content
        </p>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            className="css-4akams"
          >
            <div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;
                    RoundedBox
                  </span>
                  <span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        header
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          "
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            Header
                          </span>
                          "
                        </span>
                      </span>
                    </span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        subheader
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          "
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            Sub header
                          </span>
                          "
                        </span>
                      </span>
                      
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      p
                    </span>
                    <span />
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &gt;
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 48,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      Content
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;/
                      p
                      &gt;
                    </span>
                  </div>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;/
                    RoundedBox
                    &gt;
                  </span>
                </div>
              </div>
            </div>
            <button
              className="css-gydez8"
              onClick={[Function]}
            >
              <div
                className="css-kv47nt"
              >
                <div
                  style={
                    Object {
                      "marginBottom": 6,
                    }
                  }
                >
                  Copied!
                </div>
                <div>
                  Copy
                </div>
              </div>
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              RoundedBox
              " Component
            </h2>
            <table
              className="css-1ytzlk7"
            >
              <thead>
                <tr>
                  <th
                    className="css-d52hbj"
                  >
                    property
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    propType
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    required
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    default
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    children
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    header
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    subheader
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    className
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    style
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    HeaderComponent
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
